-Codebase has been simplified. -Python environment has been containerized. -Scripts has been partially unified. -Models added -Camera demo module integrated. -Various improvements.

--- a/notebooks/02_face_recognition_training.ipynb
+++ b/notebooks/02_face_recognition_training.ipynb
@@ -37,10 +37,10 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "KNOWN_FACES_DIR = Path(\"../data/raw/faces/known\")\n",
+    "WATCH_LIST_DIR = Path(\"../data/raw/faces/watch_list\")\n",
     "MODEL_OUTPUT_DIR = Path(\"../data/models/face_recognition\")\n",
     "\n",
-    "print(f\"Known faces directory: {KNOWN_FACES_DIR}\")\n",
+    "print(f\"Watch list directory: {WATCH_LIST_DIR}\")\n",
     "print(f\"Model output directory: {MODEL_OUTPUT_DIR}\")"
    ]
   },
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# TODO: Implement face loading and embedding extraction\n",
-    "def load_known_faces(faces_dir: Path):\n",
+    "def load_watch_list_faces(faces_dir: Path):\n",
     "    \"\"\"Load faces and extract embeddings.\"\"\"\n",
     "    embeddings = []\n",
     "    labels = []\n",
@@ -82,7 +82,7 @@
     "    return np.array(embeddings), np.array(labels)\n",
     "\n",
     "# Load data\n",
-    "# embeddings, labels = load_known_faces(KNOWN_FACES_DIR)"
+    "# embeddings, labels = load_watch_list_faces(WATCH_LIST_DIR)"
    ]
   },
   {
